--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
+  min-height: 100%;
 }
 
 .prime-text-box {
@@ -51,6 +51,78 @@ body {
 }
 
 .prime-text {
-  max-width: 652px;
+  max-width: 800px;
   line-height: 150%;
+}
+
+@media(max-width:1040px) {
+  h1 {
+    font-size: 32px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+}
+
+@media(max-width:750px) {
+  .container {
+    padding: 0 10px;
+  }
+
+  .prime-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    overflow: hidden;
+  }
+
+  .prime-img {
+    min-width: 300px;
+    min-height: 300px;
+    padding-top: 0;
+  }
+}
+
+/*///////////////// .panel /////////////////////*/
+
+.panel {
+  margin-top: 300px;
+}
+
+.panel button {
+  padding: 10px;
+  margin-right: 30px;
+  border-radius: 5px;
+}
+
+.test {
+  opacity: 0;
+}
+
+.test.active {
+  opacity: 1;
+  z-index: 5;
+}
+
+.cat {
+  opacity: 0;
+}
+
+.cat.active {
+  opacity: 1;
+  z-index: 5;
+}
+
+#content {
+  border: 1px solid gray;
+}
+
+.prime-text-box {
+  display: none;
+}
+
+.prime-text-box.active {
+  display: flex;
 }
